Fixed some minor text alignment issues.

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ ul {
 .hero-text {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 }
 
